--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
-body{
-    background-color: rgb(3, 5, 117);
-    display: flex;
-    height: 100vh;
-    align-items: center;
-   
-
+*{
+  padding: 10px;
+  margin: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
-h1{
-   color:rgb(246, 250, 250);
-   font-family: Arial, Helvetica, sans-serif;
-   text-align: center;
-   font-size: 50px;
- line-height: 1.3;
-   width: 100%
- 
+
+#heading {
+  background-color: aqua;
+  border: 1px solid black;
+  text-align: center;
+}
+
+#paragraph {
+  background-color: burlywood;
+  border: 1px solid black;
+  text-align: justify;
 }
